# giraf-core

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/citizens/: api.py  models.py  schemas.py  services.py
apps/citizens/tests/: factories.py  test_api.py  test_citizens.py  test_models.py
apps/grades/: api.py  models.py  schemas.py  services.py
apps/grades/tests/: factories.py  test_api.py  test_grades.py  test_models.py  test_services.py
apps/invitations/: api.py  models.py  schemas.py  services.py
apps/invitations/migrations/: 0004_add_compound_indexes.py  0005_invitation_updated_at.py
apps/invitations/tests/: conftest.py  factories.py  test_api.py  test_invitations.py  test_models.py  test_services.py
apps/organizations/: api.py  models.py  schemas.py  services.py
apps/organizations/migrations/: 0003_alter_membership_unique_together_and_more.py
apps/organizations/tests/: factories.py  test_api.py  test_models.py
apps/pictograms/: api.py  models.py  schemas.py  services.py
apps/pictograms/migrations/: 0002_add_image_field.py  0003_pictogram_sound.py  0004_pictogram_citizen.py
apps/pictograms/tests/: factories.py  test_api.py  test_models.py  test_pictograms.py  test_schemas.py  test_services.py  utils.py
apps/users/: api.py  models.py  schemas.py  services.py
apps/users/migrations/: 0003_alter_user_profile_picture.py
apps/users/tests/: test_api.py  test_auth.py  test_jwt_claims.py  test_models.py  test_services.py  test_token_blacklist.py
config/: api.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
core/: __init__.py  checks.py  exceptions.py  jwt.py  permissions.py  schemas.py  throttling.py  validators.py
core/clients/: giraf_ai.py
core/management/commands/: seed_dev_data.py
core/tests/: __init__.py  test_checks.py  test_giraf_ai_client.py  test_integration.py  test_permissions.py  test_seed_dev_data.py  test_throttling.py  test_urls.py  test_validators.py
